# bevy-game-jam-5

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
art/: art.blend
assets/: registry.json
assets/levels/: Scene.glb
src/: camera.rs  main.rs  state.rs
src/physics/: controls.rs  mod.rs  physics_replace_proxies.rs  utils.rs
