[package]
name = "bevy-game-jam-5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-game-jam-5"
path = "src/main.rs"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.1"
bevy_egui = "0.28.0"
bevy_panorbit_camera = { version = "0.19.1", features = ["bevy_egui"] }
blenvy = { git = "https://github.com/kaosat-dev/Blenvy/", rev = "1e262cb7242b6142c99bd473a005bf4cd5483e10" }
bevy_rapier3d = { version = "0.27.0", features = ["debug-render-3d"] }

[profile.release]
strip = true

# Optimize for binary size for WASM (build is slower)
[profile.release-wasm]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1